increase the width to a maximum of 1280px
We had to use a wrapper to get the correct width of the left col.
Because fixed width are always relative to the window we increase the
width of the left col to the same values as the container. The warapper
adds then the margin right relative to this container so that the inner
width matches the default width of 3 columns.

--- a/layout/prototype.html
+++ b/layout/prototype.html
@@ -13,7 +13,7 @@
     <style>
 
       body, input, select { font-family: "Noto Sans", sans-serif; }
-      nav .nav-wrapper { max-width: 992px; margin: 0 auto; padding: 0 20px; }
+      nav .nav-wrapper { max-width: 1280px; margin: 0 auto; padding: 0 20px; }
       nav .sidenav-toggle { padding: 0 20px; margin-left: -20px; position: absolute; bottom: 0; }
       nav .sidenav-toggle .close-icon { display: none; }
       nav ul li:last-child { margin-right: -20px; }
@@ -23,17 +23,19 @@
       .tabs .indicator { background-color: #00897b; }
       label.label-icon.right { left: auto; right: 0; }
 
-      .container { max-width: 992px; width: 100%; }
+      .container { max-width: 1280px; width: 100%; }
       .main.container { margin-top: 24px; }
       #right-col { padding: 0 0 0 0.75rem; }
       /*#right-col > .card:first-child { margin-top: 0; }*/
       /*#left-col > .card:first-child { margin-top: 0; }*/
-      #left-col { width: 248px; position: absolute; z-index: 2; }
+      #left-col { width: 100%; max-width: 1280px; position: absolute; z-index: 2; }
+      #left-col-wrapper { margin-right: calc(75% + 1.5rem); }
       #left-col .nav { margin-top: 24px; }
       #left-col .nav li { height: 48px; line-height: 48px; font-size: 14px; font-weight: 500; }
       #left-col .nav li>a { color: rgba(0,0,0,0.87); display: block; padding: 0 32px;  }
       #left-col .nav li>a>i { float: left; height: 48px; line-height: 48px; margin: 0 32px 0 0; width: 24px; color: rgba(0,0,0,0.54); }
 
+      .card { margin: 0 0 1.5rem 0; }
       .card.search:not(.active) { box-shadow: none; background: none; }
       .card-content.search { padding: 5px 32px; }
       .card-content.search .input-field { margin: 0; }
@@ -156,22 +158,24 @@
 <!-- Content -->
 <div class="main container">
   <div class="row">
-    <div class="col l4 hide-on-med-and-down" id="left-col">
-      <div class="card search">
-        <div class="card-content search">
-          <div class="input-field">
-            <input type="text" placeholder="Search">
-            <label class="label-icon right"><i class="material-icons">search</i></label>
+    <div class="col l3 hide-on-med-and-down" id="left-col">
+      <div id="left-col-wrapper">
+        <div class="card search">
+          <div class="card-content search">
+            <div class="input-field">
+              <input type="text" placeholder="Search">
+              <label class="label-icon right"><i class="material-icons">search</i></label>
+            </div>
           </div>
         </div>
+        <ul class="nav">
+          <li><a href="/home"><i class="material-icons">home</i> Home</a></li>
+          <li><a href="/blog"><i class="material-icons">rss_feed</i> Blog</a></li>
+          <li><a href="/guide"><i class="material-icons">toc</i> Guide</a></li>
+          <li><a href="/docs"><i class="material-icons">library_books</i> Documentation</a></li>
+          <li><a href="/exchange"><i class="material-icons">question_answer</i> Exchange</a></li>
+        </ul>
       </div>
-      <ul class="nav">
-        <li><a href="/home"><i class="material-icons">home</i> Home</a></li>
-        <li><a href="/blog"><i class="material-icons">rss_feed</i> Blog</a></li>
-        <li><a href="/guide"><i class="material-icons">toc</i> Guide</a></li>
-        <li><a href="/docs"><i class="material-icons">library_books</i> Documentation</a></li>
-        <li><a href="/exchange"><i class="material-icons">question_answer</i> Exchange</a></li>
-      </ul>
     </div>
     <div class="col s12 l9 offset-l3" id="right-col">
       <div class="card search show-on-medium-and-down" style="display: none;">
@@ -267,6 +271,10 @@
           <p>Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac placerat dolor lectus quis orci.<br><br></p>
 
           <p>Phasellus consectetuer vestibulum elit. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc. Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id purus. Ut varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis<br><br></p>
+
+          <p>Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac placerat dolor lectus quis orci.<br><br></p>
+
+          <p>Phasellus consectetuer vestibulum elit. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc. Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id purus. Ut varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis<br><br></p>
         </div>
       </div>
     </div>
@@ -326,7 +334,7 @@
           let scrollAnimations = [
               {
                   from: 0,
-                  to: 200,
+                  to: headerAnimationEnd/2,
                   before: [
                       {
                           element: headerIcon,
@@ -445,7 +453,7 @@
                   ],
               },
               {
-                  from: 200,
+                  from: headerAnimationEnd/2,
                   to: headerAnimationEnd,
                   before: [
                       {
