bring the menu back to default level to avoid unclickable content

--- a/layout/prototype.html
+++ b/layout/prototype.html
@@ -28,7 +28,7 @@
       #right-col { padding: 0 0 0 0.75rem; }
       /*#right-col > .card:first-child { margin-top: 0; }*/
       /*#left-col > .card:first-child { margin-top: 0; }*/
-      #left-col { width: 100%; max-width: 1280px; position: absolute; z-index: 2; }
+      #left-col { width: 100%; max-width: 1280px; position: absolute; }
       #left-col-wrapper { margin-right: calc(75% + 1.5rem); }
       #left-col .nav { margin-top: 24px; }
       #left-col .nav li { height: 48px; line-height: 48px; font-size: 14px; font-weight: 500; }
